==============================================================
1.0.7 RC1 [2023/06/27]
==============================================================
 - fixed bugs in event cancellation (goffy)
 - new mail templates for event cancellation (goffy)
 - updates for XOOPS 2.5.11 Stable (goffy)
 - added email validation (goffy)

==============================================================
1.0.6 Stable [2023/03/09]
==============================================================
 - fixed bugs in block (goffy)

==============================================================
1.0.5 Stable [2023/02/28]
==============================================================
 - moved to last stable with smarty 2 (goffy)

==============================================================
1.0.5 RC2 [2023/01/03]
==============================================================
- restructured cron jobs (goffy)
- implementation fee types (goffy)
- implementation of wggallery (goffy)
- implementation of external link for registration (goffy)
- code cleaning with phpstorm code inspection (goffy)

==============================================================
1.0.5 RC1 [2022/11/01]
==============================================================
 - implementation allday (goffy)
 - implementation subcats (goffy)
 - implementation filter events by cats (goffy)
 - merged all "get events" into one function (goffy)
 - created function to get cats for filters (goffy)
 - created new block templates (goffy)
 - fixed bug in output excel (goffy)
 - removed duplicates of cats (goffy)
 - gmap on index page (goffy)
 - fixed bug in calendar page (goffy)
 - added check for dates from/to (goffy)
 - fixed multiple primary mail accounts (goffy)
 - keep filter cats when editing event (goffy)
 - fixed problems with smtp mail accounts (goffy)
 - added new checks/cleaning in maintenance (goffy)
 - added export as excel or ics (goffy)
 - implementation image for cats (goffy)
 - implementation of image editor (goffy)